# mello

./: .gitignore  README.md  mello.cabal
.github/workflows/: ci.yml
src/: Mello.hs
src/Mello/: GdbMI.hs  Memory.hs
src/Mello/Gdb/: MI.hs  Session.hs
test/: GdbTests.hs  TestMain.hs
test/golden/: bkpt.mi-output  bkpt.mi-parsed  debug_struct.mi-output  debug_struct.mi-parsed  regs.mi-output  regs.mi-parsed  running.mi-output  running.mi-parsed  startup.mi-output  startup.mi-parsed  streams.mi-output  streams.mi-parsed  tokens.mi-output  tokens.mi-parsed
