cabal-version:       3.0
name:                mello
version:             0.0.0.0
synopsis:            Haskell memory inspection, debugging and tracing library
description:         Haskell memory inspection, debugging and tracing library
license:             GPL-3.0-only
license-file:        LICENSE
author:              Tito Sacchi
maintainer:          Tito Sacchi <tito.sakki@gmail.com>
copyright:           2021 Tito Sacchi
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == { 8.8.4, 8.10.5, 9.0.1 }

common common-options
  build-depends:       base >= 4.13.0.0 && < 5
                     , bytestring >= 0.10

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Mello
                     , Mello.Memory

test-suite mello-tests
  import:              common-options
  ghc-options:         -threaded
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestMain.hs
  build-depends:       mello
                     , tasty >= 1.4
                     , tasty-hunit >= 0.10
